fix some spacing bugs

--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,16 @@ body {
 }
 
 main.photos {
-  padding: 10px;
+  padding: 8px 4px;
   display: grid;
-  grid-gap: 2px;
+  grid-gap: 4px;
   grid-auto-rows: 200px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-flow: dense;
 }
 
 main.cart-page {
-  padding: 10px;
+  padding: 24px 24px;
 }
 
 .cart-page>h1 {
@@ -85,6 +85,14 @@ img.image-grid {
   left: 5px;
   cursor: pointer;
 }
+
+/* .price {
+  color: var(--light-blue);
+  font-size: 1.2rem;
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+} */
 
 .ri-heart-fill {
   opacity: .7;
