--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,13 +1,13 @@
 header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #272727;
-  color: var(--light-blue);
-  padding: 0 10px;
-  -webkit-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
-  -moz-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
-  box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+    justify-content: space-between;
+    align-items: center;
+    background-color: #272727;
+    color: var(--light-blue);
+    padding: 0 10px;
+    -webkit-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+    -moz-box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
+    box-shadow: 0px 2px 10px -5px rgba(21, 6, 5, 1);
 }
 
 .cart-item-quantity {
@@ -17,8 +17,17 @@ header {
   z-index: 10;
   color: var(--black);
   font-weight: bolder;
-  font-size: 12px;
+  font-size: 10px;
   background-color: var(--blue);
   padding: 1px 5px;
   border-radius: 8px;
+}
+
+.site-header, .ri-shopping-cart-fill, .ri-shopping-cart-line {
+  /* margin: 16px; */
+}
+
+.site-header {
+  letter-spacing: 4px;
+  font-size: 24px;
 }
